# Big-Integer

./: .gitignore  BigInt.cpp  BigInt.h  CMakeLists.txt  Makefile  README.md  build.sh  testBigInt.cpp
cmake/: config.cmake
src/: BigInt.cpp
unit_tests/: test_BigInt.cpp
